Some progress and organisation

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
             <button id="self-name-copy">Copy</button>
 
         </div>
+        <button id="start-game" class="hide">Start Game</button>
 
     </div>
 
